ensure basic example works

--- a/notebooks/Basic_Demo.ipynb
+++ b/notebooks/Basic_Demo.ipynb
@@ -6,8 +6,8 @@
    "id": "c8077fd1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:05.813209Z",
-     "start_time": "2023-03-10T02:19:05.787145Z"
+     "end_time": "2023-03-13T20:43:41.868863Z",
+     "start_time": "2023-03-13T20:43:41.841740Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "id": "15c34696",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:07.343742Z",
-     "start_time": "2023-03-10T02:19:05.815110Z"
+     "end_time": "2023-03-13T20:43:43.460750Z",
+     "start_time": "2023-03-13T20:43:41.870974Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,8 @@
    "id": "b5f7bf00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:07.388323Z",
-     "start_time": "2023-03-10T02:19:07.348613Z"
+     "end_time": "2023-03-13T20:43:43.504706Z",
+     "start_time": "2023-03-13T20:43:43.465508Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "id": "836a65cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:11.190479Z",
-     "start_time": "2023-03-10T02:19:07.389931Z"
+     "end_time": "2023-03-13T20:43:47.349702Z",
+     "start_time": "2023-03-13T20:43:43.506252Z"
     }
    },
    "outputs": [
@@ -194,8 +194,8 @@
    "id": "961254f8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:11.597168Z",
-     "start_time": "2023-03-10T02:19:11.192237Z"
+     "end_time": "2023-03-13T20:43:47.768515Z",
+     "start_time": "2023-03-13T20:43:47.351260Z"
     }
    },
    "outputs": [
@@ -242,8 +242,8 @@
    "id": "7cfb6fce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:11.990350Z",
-     "start_time": "2023-03-10T02:19:11.598953Z"
+     "end_time": "2023-03-13T20:43:48.187011Z",
+     "start_time": "2023-03-13T20:43:47.770262Z"
     }
    },
    "outputs": [
@@ -297,8 +297,8 @@
    "id": "03f3323e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:12.037695Z",
-     "start_time": "2023-03-10T02:19:11.992054Z"
+     "end_time": "2023-03-13T20:43:48.230857Z",
+     "start_time": "2023-03-13T20:43:48.188742Z"
     }
    },
    "outputs": [
@@ -326,8 +326,8 @@
    "id": "20a7beea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:21.904180Z",
-     "start_time": "2023-03-10T02:19:12.039227Z"
+     "end_time": "2023-03-13T20:43:58.668754Z",
+     "start_time": "2023-03-13T20:43:48.232440Z"
     }
    },
    "outputs": [],
@@ -343,8 +343,8 @@
    "id": "cc374aac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:22.170895Z",
-     "start_time": "2023-03-10T02:19:21.907920Z"
+     "end_time": "2023-03-13T20:43:58.942488Z",
+     "start_time": "2023-03-13T20:43:58.672840Z"
     }
    },
    "outputs": [
@@ -405,8 +405,8 @@
    "id": "ad6f4c77",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:42.388829Z",
-     "start_time": "2023-03-10T02:19:22.172733Z"
+     "end_time": "2023-03-13T20:44:16.102714Z",
+     "start_time": "2023-03-13T20:43:58.944190Z"
     }
    },
    "outputs": [
@@ -448,7 +448,7 @@
        "      <th>beam_mode</th>\n",
        "      <th>size_gb</th>\n",
        "      <th>stack_repeat_pass_id</th>\n",
-       "      <th>repeat_pass_date</th>\n",
+       "      <th>repeat_pass_timestamp</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -465,7 +465,7 @@
        "      <td>IW</td>\n",
        "      <td>2.474112</td>\n",
        "      <td>9</td>\n",
-       "      <td>2015-05-19</td>\n",
+       "      <td>2015-05-19 00:00:00+00:00</td>\n",
        "      <td>POLYGON ((-118.03455 35.87319, -117.64374 37.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -480,7 +480,7 @@
        "      <td>IW</td>\n",
        "      <td>2.482766</td>\n",
        "      <td>9</td>\n",
-       "      <td>2015-05-19</td>\n",
+       "      <td>2015-05-19 00:00:00+00:00</td>\n",
        "      <td>POLYGON ((-118.37766 34.31689, -117.98006 35.9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -495,7 +495,7 @@
        "      <td>IW</td>\n",
        "      <td>2.279615</td>\n",
        "      <td>9</td>\n",
-       "      <td>2015-05-19</td>\n",
+       "      <td>2015-05-19 00:00:00+00:00</td>\n",
        "      <td>POLYGON ((-118.71146 32.81956, -118.33259 34.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -510,7 +510,7 @@
        "      <td>IW</td>\n",
        "      <td>2.504498</td>\n",
        "      <td>11</td>\n",
-       "      <td>2015-06-12</td>\n",
+       "      <td>2015-06-12 00:00:00+00:00</td>\n",
        "      <td>POLYGON ((-118.02811 35.87192, -117.63700 37.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,7 +525,7 @@
        "      <td>IW</td>\n",
        "      <td>2.429534</td>\n",
        "      <td>11</td>\n",
-       "      <td>2015-06-12</td>\n",
+       "      <td>2015-06-12 00:00:00+00:00</td>\n",
        "      <td>POLYGON ((-118.35521 34.37390, -117.97107 35.9...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -561,12 +561,12 @@
        "3           VV   6341        IW  2.504498                    11   \n",
        "4           VV   6341        IW  2.429534                    11   \n",
        "\n",
-       "  repeat_pass_date                                           geometry  \n",
-       "0       2015-05-19  POLYGON ((-118.03455 35.87319, -117.64374 37.4...  \n",
-       "1       2015-05-19  POLYGON ((-118.37766 34.31689, -117.98006 35.9...  \n",
-       "2       2015-05-19  POLYGON ((-118.71146 32.81956, -118.33259 34.4...  \n",
-       "3       2015-06-12  POLYGON ((-118.02811 35.87192, -117.63700 37.4...  \n",
-       "4       2015-06-12  POLYGON ((-118.35521 34.37390, -117.97107 35.9...  "
+       "      repeat_pass_timestamp                                           geometry  \n",
+       "0 2015-05-19 00:00:00+00:00  POLYGON ((-118.03455 35.87319, -117.64374 37.4...  \n",
+       "1 2015-05-19 00:00:00+00:00  POLYGON ((-118.37766 34.31689, -117.98006 35.9...  \n",
+       "2 2015-05-19 00:00:00+00:00  POLYGON ((-118.71146 32.81956, -118.33259 34.4...  \n",
+       "3 2015-06-12 00:00:00+00:00  POLYGON ((-118.02811 35.87192, -117.63700 37.4...  \n",
+       "4 2015-06-12 00:00:00+00:00  POLYGON ((-118.35521 34.37390, -117.97107 35.9...  "
       ]
      },
      "execution_count": 10,
@@ -585,8 +585,8 @@
    "id": "e8c00571",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:19:42.429077Z",
-     "start_time": "2023-03-10T02:19:42.390606Z"
+     "end_time": "2023-03-13T20:44:16.141874Z",
+     "start_time": "2023-03-13T20:44:16.104504Z"
     }
    },
    "outputs": [
@@ -624,8 +624,8 @@
    "id": "597171e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.362092Z",
-     "start_time": "2023-03-10T02:19:42.430667Z"
+     "end_time": "2023-03-13T20:45:07.941712Z",
+     "start_time": "2023-03-13T20:44:16.143702Z"
     }
    },
    "outputs": [
@@ -633,7 +633,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date Pairs: 100%|█| 879/879 [00:50<00:00, 17.\n"
+      "Date Pairs: 100%|█| 879/879 [00:51<00:00, 17.\n"
      ]
     }
    ],
@@ -654,8 +654,8 @@
    "id": "5a7fde0a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.402704Z",
-     "start_time": "2023-03-10T02:20:33.363858Z"
+     "end_time": "2023-03-13T20:45:07.980868Z",
+     "start_time": "2023-03-13T20:45:07.943498Z"
     }
    },
    "outputs": [
@@ -666,8 +666,8 @@
        "  'S1A_IW_SLC__1SDV_20230302T140043_20230302T140110_047466_05B2DB_F791'],\n",
        " 'secondary': ['S1A_IW_SLC__1SDV_20230125T140019_20230125T140046_046941_05A132_82DF',\n",
        "  'S1A_IW_SLC__1SDV_20230125T140044_20230125T140111_046941_05A132_59E7'],\n",
-       " 'reference_date': datetime.date(2023, 3, 2),\n",
-       " 'secondary_date': datetime.date(2023, 1, 25),\n",
+       " 'reference_date': Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       " 'secondary_date': Timestamp('2023-01-25 00:00:00+0000', tz='UTC'),\n",
        " 'frame_id': 22439,\n",
        " 'geometry': <POLYGON Z ((-121.034 34.871 0, -121.037 34.871 0, -120.807 36.008 0, -117.9...>}"
       ]
@@ -687,8 +687,8 @@
    "id": "a63f9444",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.442443Z",
-     "start_time": "2023-03-10T02:20:33.404536Z"
+     "end_time": "2023-03-13T20:45:08.019372Z",
+     "start_time": "2023-03-13T20:45:07.982724Z"
     }
    },
    "outputs": [
@@ -724,8 +724,8 @@
    "id": "39aecd45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.498359Z",
-     "start_time": "2023-03-10T02:20:33.444237Z"
+     "end_time": "2023-03-13T20:45:08.073396Z",
+     "start_time": "2023-03-13T20:45:08.021283Z"
     }
    },
    "outputs": [
@@ -736,8 +736,8 @@
        "  'S1A_IW_SLC__1SDV_20230302T140043_20230302T140110_047466_05B2DB_F791'],\n",
        " 'secondary': ['S1A_IW_SLC__1SDV_20230125T140019_20230125T140046_046941_05A132_82DF',\n",
        "  'S1A_IW_SLC__1SDV_20230125T140044_20230125T140111_046941_05A132_59E7'],\n",
-       " 'reference_date': datetime.date(2023, 3, 2),\n",
-       " 'secondary_date': datetime.date(2023, 1, 25),\n",
+       " 'reference_date': Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       " 'secondary_date': Timestamp('2023-01-25 00:00:00+0000', tz='UTC'),\n",
        " 'frame_id': 22439,\n",
        " 'bbox': [-121.03970777704313,\n",
        "  34.844158664445,\n",
@@ -767,8 +767,8 @@
    "id": "7733ae76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.570995Z",
-     "start_time": "2023-03-10T02:20:33.500263Z"
+     "end_time": "2023-03-13T20:45:08.157804Z",
+     "start_time": "2023-03-13T20:45:08.075299Z"
     }
    },
    "outputs": [],
@@ -807,8 +807,8 @@
    "id": "61d07f68",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.770560Z",
-     "start_time": "2023-03-10T02:20:33.572674Z"
+     "end_time": "2023-03-13T20:45:08.353768Z",
+     "start_time": "2023-03-13T20:45:08.159377Z"
     }
    },
    "outputs": [],
@@ -823,17 +823,20 @@
    "id": "21be8ece",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.860746Z",
-     "start_time": "2023-03-10T02:20:33.772338Z"
+     "end_time": "2023-03-13T20:45:08.577747Z",
+     "start_time": "2023-03-13T20:45:08.355067Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(datetime.date(2023, 3, 2), datetime.date(2023, 1, 25)),\n",
-       " (datetime.date(2023, 3, 2), datetime.date(2023, 1, 13)),\n",
-       " (datetime.date(2023, 3, 2), datetime.date(2023, 1, 1))]"
+       "[(Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       "  Timestamp('2023-01-25 00:00:00+0000', tz='UTC')),\n",
+       " (Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       "  Timestamp('2023-01-13 00:00:00+0000', tz='UTC')),\n",
+       " (Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       "  Timestamp('2023-01-01 00:00:00+0000', tz='UTC'))]"
       ]
      },
      "execution_count": 18,
@@ -842,7 +845,7 @@
     }
    ],
    "source": [
-    "unique_dates = df_stack.repeat_pass_date.unique()\n",
+    "unique_dates = df_stack.repeat_pass_timestamp.unique()\n",
     "date_pairs = enumerate_dates(unique_dates, min_temporal_baseline)\n",
     "date_pairs[:3]"
    ]
@@ -853,8 +856,8 @@
    "id": "3d0bf162",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:33.904009Z",
-     "start_time": "2023-03-10T02:20:33.862376Z"
+     "end_time": "2023-03-13T20:45:08.621834Z",
+     "start_time": "2023-03-13T20:45:08.579445Z"
     }
    },
    "outputs": [],
@@ -879,8 +882,8 @@
    "id": "0073379e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:37.604993Z",
-     "start_time": "2023-03-10T02:20:33.905697Z"
+     "end_time": "2023-03-13T20:45:12.349060Z",
+     "start_time": "2023-03-13T20:45:08.623523Z"
     }
    },
    "outputs": [
@@ -928,8 +931,8 @@
    "id": "9d216bff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:37.649629Z",
-     "start_time": "2023-03-10T02:20:37.606759Z"
+     "end_time": "2023-03-13T20:45:12.397466Z",
+     "start_time": "2023-03-13T20:45:12.350674Z"
     }
    },
    "outputs": [
@@ -940,8 +943,8 @@
        "   'S1A_IW_SLC__1SDV_20230302T140043_20230302T140110_047466_05B2DB_F791'],\n",
        "  'secondary': ['S1A_IW_SLC__1SDV_20230125T140019_20230125T140046_046941_05A132_82DF',\n",
        "   'S1A_IW_SLC__1SDV_20230125T140044_20230125T140111_046941_05A132_59E7'],\n",
-       "  'reference_date': datetime.date(2023, 3, 2),\n",
-       "  'secondary_date': datetime.date(2023, 1, 25),\n",
+       "  'reference_date': Timestamp('2023-03-02 00:00:00+0000', tz='UTC'),\n",
+       "  'secondary_date': Timestamp('2023-01-25 00:00:00+0000', tz='UTC'),\n",
        "  'frame_id': 22439,\n",
        "  'geometry': <POLYGON Z ((-121.034 34.871 0, -121.037 34.871 0, -120.807 36.008 0, -117.9...>}]"
       ]
@@ -962,8 +965,8 @@
    "id": "917fc8c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:37.699114Z",
-     "start_time": "2023-03-10T02:20:37.651135Z"
+     "end_time": "2023-03-13T20:45:12.452190Z",
+     "start_time": "2023-03-13T20:45:12.399478Z"
     }
    },
    "outputs": [],
@@ -982,8 +985,8 @@
    "id": "6904a44c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T02:20:38.303088Z",
-     "start_time": "2023-03-10T02:20:37.700823Z"
+     "end_time": "2023-03-13T20:45:13.067992Z",
+     "start_time": "2023-03-13T20:45:12.453889Z"
     }
    },
    "outputs": [
