finish ifg_enum tests

--- a/notebooks/Basic_Demo.ipynb
+++ b/notebooks/Basic_Demo.ipynb
@@ -763,12 +763,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "7733ae76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:45:08.157804Z",
-     "start_time": "2023-03-13T20:45:08.075299Z"
+     "end_time": "2023-03-14T17:12:25.778507Z",
+     "start_time": "2023-03-14T17:12:25.694003Z"
     }
    },
    "outputs": [],
@@ -778,7 +778,7 @@
     "\n",
     "class ifgEncoder(json.JSONEncoder):\n",
     "    def default(self, obj):\n",
-    "        if isinstance(obj, datetime.datetime):\n",
+    "        if isinstance(obj, pd.Timestamp):\n",
     "            return str(obj)\n",
     "\n",
     "json.dump(data_ifg, \n",
