--- a/tests/data/For tests.ipynb
+++ b/tests/data/For tests.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "161942a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:32:23.949078Z",
-     "start_time": "2023-03-13T20:32:23.910448Z"
+     "end_time": "2023-03-14T18:57:51.361026Z",
+     "start_time": "2023-03-14T18:57:51.331628Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -37,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "a3e5e565",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:32:25.223656Z",
-     "start_time": "2023-03-13T20:32:25.190536Z"
+     "end_time": "2023-03-14T18:57:52.911557Z",
+     "start_time": "2023-03-14T18:57:51.365144Z"
     }
    },
    "outputs": [],
@@ -52,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "17ce84ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:32:25.416833Z",
-     "start_time": "2023-03-13T20:32:25.382865Z"
+     "end_time": "2023-03-14T18:57:52.946549Z",
+     "start_time": "2023-03-14T18:57:52.913234Z"
     }
    },
    "outputs": [],
@@ -68,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "435e792a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:32:25.601427Z",
-     "start_time": "2023-03-13T20:32:25.566744Z"
+     "end_time": "2023-03-14T18:57:52.981175Z",
+     "start_time": "2023-03-14T18:57:52.948316Z"
     }
    },
    "outputs": [],
@@ -88,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "7c40cf74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:33:03.547944Z",
-     "start_time": "2023-03-13T20:32:25.758646Z"
+     "end_time": "2023-03-14T19:01:02.640795Z",
+     "start_time": "2023-03-14T18:57:52.983823Z"
     }
    },
    "outputs": [
@@ -103,23 +94,21 @@
        "'frame_9848_asf_results.json'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#generate_mock_data(21249)\n",
-    "#generate_mock_data(22439)\n",
-    "generate_mock_data(13403)\n",
-    "generate_mock_data(13404)\n",
-    "generate_mock_data(9847)\n",
-    "generate_mock_data(9848)"
+    "# generate_mock_data(13403)\n",
+    "# generate_mock_data(13404)\n",
+    "# generate_mock_data(9847)\n",
+    "# generate_mock_data(9848)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8a6be16",
+   "id": "0633c9e4",
    "metadata": {},
    "source": [
     "# For Enumeration\n",
@@ -129,12 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "1f1a0fbb",
+   "execution_count": 6,
+   "id": "5cf1c82e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:33:03.587807Z",
-     "start_time": "2023-03-13T20:33:03.549998Z"
+     "end_time": "2023-03-14T19:01:02.682919Z",
+     "start_time": "2023-03-14T19:01:02.644591Z"
     }
    },
    "outputs": [],
@@ -151,12 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "37f27515",
+   "execution_count": 7,
+   "id": "bc833000",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:33:03.629625Z",
-     "start_time": "2023-03-13T20:33:03.589413Z"
+     "end_time": "2023-03-14T19:01:02.731018Z",
+     "start_time": "2023-03-14T19:01:02.684487Z"
     }
    },
    "outputs": [
@@ -166,7 +155,7 @@
        "2"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "7f56e10e",
+   "execution_count": 8,
+   "id": "73264513",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:33:03.664933Z",
-     "start_time": "2023-03-13T20:33:03.632185Z"
+     "end_time": "2023-03-14T19:01:02.765380Z",
+     "start_time": "2023-03-14T19:01:02.732796Z"
     }
    },
    "outputs": [
@@ -203,38 +192,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "38119ad4",
+   "execution_count": 10,
+   "id": "c6b78ec7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:35:00.423616Z",
-     "start_time": "2023-03-13T20:35:00.388465Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(957, 12)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "d4a4db1c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-13T20:39:42.029521Z",
-     "start_time": "2023-03-13T20:39:12.138270Z"
+     "end_time": "2023-03-14T19:03:56.848445Z",
+     "start_time": "2023-03-14T19:01:38.570871Z"
     }
    },
    "outputs": [
@@ -397,7 +360,7 @@
        "4 2015-05-07 00:00:00+00:00  POLYGON ((-121.74913 37.56177, -121.34393 35.8...  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "0773ee83",
+   "execution_count": 11,
+   "id": "9a1552c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:39:42.067508Z",
-     "start_time": "2023-03-13T20:39:42.031435Z"
+     "end_time": "2023-03-14T19:03:56.884383Z",
+     "start_time": "2023-03-14T19:03:56.850472Z"
     }
    },
    "outputs": [
@@ -424,7 +387,7 @@
        "<UTC>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,12 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "25fef037",
+   "execution_count": 12,
+   "id": "9210803c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:39:42.110024Z",
-     "start_time": "2023-03-13T20:39:42.069338Z"
+     "end_time": "2023-03-14T19:03:56.923778Z",
+     "start_time": "2023-03-14T19:03:56.886037Z"
     }
    },
    "outputs": [
@@ -450,7 +413,7 @@
        "(30, 12)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "dde2c4ed",
+   "execution_count": 13,
+   "id": "4c0dd148",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:39:42.161226Z",
-     "start_time": "2023-03-13T20:39:42.112125Z"
+     "end_time": "2023-03-14T19:03:56.982094Z",
+     "start_time": "2023-03-14T19:03:56.925981Z"
     }
    },
    "outputs": [],
@@ -483,12 +446,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "96f2cc9c",
+   "execution_count": 17,
+   "id": "a60402c3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:40:22.273575Z",
-     "start_time": "2023-03-13T20:40:22.225747Z"
+     "end_time": "2023-03-14T19:07:32.373845Z",
+     "start_time": "2023-03-14T19:07:32.338715Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Timestamp('2022-09-03 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-09-15 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-09-27 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-10-09 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-10-21 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-11-02 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-11-14 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-11-26 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-12-08 00:00:00+0000', tz='UTC'),\n",
+       " Timestamp('2022-12-20 00:00:00+0000', tz='UTC')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = df_stack_subset.repeat_pass_timestamp.unique().tolist()\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f4ebffd9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T19:03:57.062806Z",
+     "start_time": "2023-03-14T19:03:57.018739Z"
     }
    },
    "outputs": [
@@ -507,7 +506,7 @@
        " 'geometry': None}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,72 +523,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "4313098c",
+   "execution_count": 16,
+   "id": "4fe32e64",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:40:23.686043Z",
-     "start_time": "2023-03-13T20:40:23.648993Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "f = S1Frame(21248)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "9dd91ceb",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-13T20:41:28.515658Z",
-     "start_time": "2023-03-13T20:41:28.472450Z"
+     "end_time": "2023-03-14T19:03:57.114261Z",
+     "start_time": "2023-03-14T19:03:57.064600Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<UTC>"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ref_date.tz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "756c3398",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-13T20:40:29.532956Z",
-     "start_time": "2023-03-13T20:40:29.472582Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'reference': ['S1A_IW_SLC__1SDV_20221220T015822_20221220T015852_046409_058F3D_D201',\n",
-       "  'S1A_IW_SLC__1SDV_20221220T015850_20221220T015918_046409_058F3D_2768'],\n",
-       " 'secondary': ['S1A_IW_SLC__1SDV_20221208T015823_20221208T015853_046234_058941_FEE4',\n",
-       "  'S1A_IW_SLC__1SDV_20221208T015851_20221208T015919_046234_058941_A19D'],\n",
-       " 'reference_date': Timestamp('2022-12-20 00:00:00+0000', tz='UTC'),\n",
-       " 'secondary_date': Timestamp('2022-12-08 00:00:00+0000', tz='UTC'),\n",
-       " 'frame_id': 21248,\n",
-       " 'geometry': <POLYGON Z ((-120.849 33.739 0, -120.891 33.919 0, -120.926 34.086 0, -121.0...>}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m ref_date \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mTimestamp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2022-12-20\u001b[39m\u001b[38;5;124m'\u001b[39m, tz\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUTC\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m sec_date \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mTimestamp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2022-12-8\u001b[39m\u001b[38;5;124m'\u001b[39m, tz\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUTC\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m select_ifg_pair_from_stack(ref_date, sec_date, df_stack_subset, \u001b[43mf\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
     }
    ],
    "source": [
