CA example and updates to comments

--- a/notebooks/Basic_Demo.ipynb
+++ b/notebooks/Basic_Demo.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "15c34696",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T20:43:43.460750Z",
-     "start_time": "2023-03-13T20:43:41.870974Z"
+     "end_time": "2023-03-17T20:56:23.801674Z",
+     "start_time": "2023-03-17T20:56:23.312484Z"
     }
    },
    "outputs": [],
@@ -386,17 +386,20 @@
    "id": "5134aded",
    "metadata": {},
    "source": [
-    "# Get Stack from Frame\n",
+    "# Get Stack from Frames\n",
     "\n",
-    "Here a stack is a list of images with metadata and extents. We note the stack here is not arbitrarily constructed and at some point might be nice to create a simple class to encapsulate it. However, here a stack is one that can be organized to do interferometry over the frames.\n",
+    "Here a stack is a list of images with metadata and extents. The stack is constructed and formatted rather carefully with the following properities:\n",
     "\n",
-    "1. Per frame coverage $\\geq 99$% as it pertains to the frame's coverage geometry\n",
-    "2. Contiguous coverage through frames (determined as Polygon object)\n",
+    "1. Per frame coverage $\\geq .25$% as it pertains to each frame's footprint (bursts that intersect the actual frame)\n",
+    "2. Contiguous coverage through a pass (determined as Polygon object) and\n",
+    "3. Per pass coverage of $\\geq .80$% as determined by all the frame geometries aggregated together\n",
     "\n",
-    "Requires:\n",
+    "There are two competing goals with any enumeration:\n",
     "\n",
-    "1. Frames to be contiguous (otherwise 2. does not make sense)\n",
-    "2. Requires single track or two sequential tracks (we only check if the track numbers are sequential)"
+    "1. Spatial coverage: space covered by all dates in the time series stack\n",
+    "2. Temporal coverage: number of dates in stack \n",
+    "\n",
+    "Sacrificing spatial coverage in a given pass likely increases the overall temporal coverage and vice versa. There are some parameters worth exploring in the `get_s1_stack` that control the first item (i.e. spatial coverage) as it relates to per frame and per pass coverage. Decreasing these requirements will allow more dates to be included in the stack."
    ]
   },
   {
@@ -612,10 +615,7 @@
    "source": [
     "# Generate Pairs\n",
     "\n",
-    "Now we generate the frames - most important elements of returned data is:\n",
-    "\n",
-    "1. SLC Ids of reference and secondary\n",
-    "2. Extent of related frames"
+    "Now we generate the frames - most important elements of returned data is the SLC Ids of reference and secondary scenes."
    ]
   },
   {
@@ -799,6 +799,24 @@
     "We are going to visualize the time series and individual frame coverage below. \n",
     "\n",
     "## Dates in Time-Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9c94f4b0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T17:12:39.670755Z",
+     "start_time": "2023-03-14T17:12:39.630129Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x = json.dumps(data_ifg[:2], \n",
+    "          indent=2,\n",
+    "          cls=ifgEncoder\n",
+    "         )"
    ]
   },
   {
