--- a/notebooks/Submitting_all_of_CA_to_Hyp3.ipynb
+++ b/notebooks/Submitting_all_of_CA_to_Hyp3.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "575dd402",
+   "id": "ca6800f8",
    "metadata": {},
    "source": [
     "# CA"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f376809b",
+   "id": "ef661afb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:04:20.581737Z",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c29123a",
+   "id": "35085e3f",
    "metadata": {},
    "source": [
     "We only want the mainlain part."
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "60275390",
+   "id": "b45abba7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:04:38.929863Z",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6aa7bdd1",
+   "id": "b567ddb5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:12:59.245966Z",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75827bd",
+   "id": "467c46a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:12:59.707454Z",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723108fa",
+   "id": "5c679dba",
    "metadata": {},
    "source": [
     "An erosion ensures not too many frames off the coast."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6a12208d",
+   "id": "d2e9c615",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:13:19.070126Z",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3380f032",
+   "id": "cd6e0b83",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:16:01.107106Z",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0fb0fb25",
+   "id": "bb27316c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T19:34:44.615290Z",
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf0b685",
+   "id": "82e444a7",
    "metadata": {},
    "source": [
     "There are numerous options if certain dates that are excluded should be included in the time series:\n",
@@ -1983,7 +1983,7 @@
    "source": [
     "all_submissions = []\n",
     "for tb in tqdm(TEMPORAL_BASELINES_DAYS, desc='temporal baselines'):\n",
-    "    for frames, df_stack, track in zip(frames_for_each_track, list_of_stacks, tqdm(all_tracks[:1])):\n",
+    "    for frames, df_stack, track in zip(frames_for_each_track, list_of_stacks, tqdm(all_tracks[:])):\n",
     "\n",
     "        data = enumerate_gunw_time_series(df_stack, \n",
     "                                          tb, \n",
@@ -2026,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "864831a9",
+   "id": "e3080149",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T21:01:42.732862Z",
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c85f45d",
+   "id": "6cd62e9c",
    "metadata": {},
    "source": [
     "# Deduplication\n",
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "9b6618e0",
+   "id": "cab6e1b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T21:07:08.514238Z",
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9c1b0a",
+   "id": "0a2462c4",
    "metadata": {},
    "outputs": [],
    "source": []
