update logic for HRRR checks on sample sites

--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -65,8 +65,8 @@
    },
    "outputs": [],
    "source": [
-    "AOI_NAME = 'Norfolk' #'Los Angeles' # 'Hawaii'\n",
-    "WEATHER_MODEL = 'GMAO'"
+    "AOI_NAME = 'Los-Angeles-0' #'Los Angeles' # 'Hawaii'\n",
+    "WEATHER_MODEL = 'HRRR'"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "if WEATHER_MODEL == 'HRRR':\n",
-    "    assert 'Los-Angeles' in AOI_NAME"
+    "    assert AOI_NAME in ['Los-Angeles-0', 'Los-Angeles-1', 'Norfolk']"
    ]
   },
   {
