include wax lake

--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -14,8 +14,8 @@
    "id": "0bd2d25a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:21.278940Z",
-     "start_time": "2023-03-23T18:01:21.252937Z"
+     "end_time": "2023-04-04T17:02:45.425097Z",
+     "start_time": "2023-04-04T17:02:45.398144Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "756918c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:22.789738Z",
-     "start_time": "2023-03-23T18:01:21.280985Z"
+     "end_time": "2023-04-04T17:02:50.133085Z",
+     "start_time": "2023-04-04T17:02:45.427496Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "id": "777b4285",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:22.826285Z",
-     "start_time": "2023-03-23T18:01:22.791449Z"
+     "end_time": "2023-04-04T17:02:50.168632Z",
+     "start_time": "2023-04-04T17:02:50.134862Z"
     }
    },
    "outputs": [],
@@ -75,14 +75,14 @@
    "id": "f7be2e2b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:22.863165Z",
-     "start_time": "2023-03-23T18:01:22.828808Z"
+     "end_time": "2023-04-04T17:02:50.207713Z",
+     "start_time": "2023-04-04T17:02:50.170528Z"
     }
    },
    "outputs": [],
    "source": [
     "if WEATHER_MODEL == 'HRRR':\n",
-    "    assert AOI_NAME in ['Los-Angeles-0', 'Los-Angeles-1', 'Norfolk']"
+    "    assert AOI_NAME in ['Los-Angeles-0', 'Los-Angeles-1', 'Norfolk', 'Wax-Lake']"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "id": "1687232a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:22.901902Z",
-     "start_time": "2023-03-23T18:01:22.865183Z"
+     "end_time": "2023-04-04T17:02:50.247655Z",
+     "start_time": "2023-04-04T17:02:50.210551Z"
     }
    },
    "outputs": [],
@@ -106,6 +106,7 @@
     "            'Tibet': Point(92, 41.5).buffer(1),\n",
     "            'Norway': Point(13, 65).buffer(1),\n",
     "            'Aleutian': Point(-177, 52).buffer(.25),\n",
+    "            'Wax-Lake': Point(-91.5, 30).buffere(1)\n",
     "            }\n",
     "\n",
     "TRACK_DICT = {'Los-Angeles-0': [64],\n",
@@ -117,6 +118,7 @@
     "              'Tibet': [48],\n",
     "              'Norway': [37],\n",
     "              'Aleutian': [59],\n",
+    "              'Wax-Lake': [63]\n",
     "              }"
    ]
   },
@@ -126,8 +128,8 @@
    "id": "587c8c37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:22.941295Z",
-     "start_time": "2023-03-23T18:01:22.903526Z"
+     "end_time": "2023-04-04T17:02:50.290541Z",
+     "start_time": "2023-04-04T17:02:50.249466Z"
     }
    },
    "outputs": [],
@@ -140,12 +142,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "0e0068ce",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-04T17:12:52.754889Z",
+     "start_time": "2023-04-04T17:12:52.717761Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-117.20822088225923"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frames[0].frame_geometry.centroid.x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "f50578b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:31.725950Z",
-     "start_time": "2023-03-23T18:01:22.943213Z"
+     "end_time": "2023-04-04T17:02:59.283219Z",
+     "start_time": "2023-04-04T17:02:50.292105Z"
     }
    },
    "outputs": [],
