--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -142,38 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0e0068ce",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-04T17:12:52.754889Z",
-     "start_time": "2023-04-04T17:12:52.717761Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-117.20822088225923"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames[0].frame_geometry.centroid.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "f50578b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-04T17:02:59.283219Z",
-     "start_time": "2023-04-04T17:02:50.292105Z"
+     "end_time": "2023-04-04T17:15:56.619725Z",
+     "start_time": "2023-04-04T17:15:47.998445Z"
     }
    },
    "outputs": [],
@@ -183,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "63ad72b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:31.763852Z",
-     "start_time": "2023-03-23T18:01:31.727664Z"
+     "end_time": "2023-04-04T17:15:56.663152Z",
+     "start_time": "2023-04-04T17:15:56.621938Z"
     }
    },
    "outputs": [],
@@ -202,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "f3634314",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-23T18:01:31.809508Z",
-     "start_time": "2023-03-23T18:01:31.765510Z"
+     "end_time": "2023-04-04T17:15:56.707938Z",
+     "start_time": "2023-04-04T17:15:56.665026Z"
     }
    },
    "outputs": [
@@ -242,27 +216,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>492</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>POLYGON Z ((-77.82534 34.47332 0.00000, -78.06...</td>\n",
+       "      <td>9847</td>\n",
+       "      <td>west</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "      <td>POLYGON Z ((-118.47827 32.36110 0.00000, -118....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>493</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>POLYGON Z ((-78.09591 35.63539 0.00000, -78.33...</td>\n",
+       "      <td>9848</td>\n",
+       "      <td>west</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "      <td>POLYGON Z ((-118.74228 33.52202 0.00000, -118....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>494</td>\n",
-       "      <td>None</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>POLYGON Z ((-78.37797 36.81111 0.00000, -78.41...</td>\n",
+       "      <td>9849</td>\n",
+       "      <td>west</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "      <td>POLYGON Z ((-119.01018 34.68551 0.00000, -119....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -270,17 +244,17 @@
       ],
       "text/plain": [
        "   frame_id hemisphere  track_number_min  track_number_max  \\\n",
-       "0       492       None                 4                 4   \n",
-       "1       493       None                 4                 4   \n",
-       "2       494       None                 4                 4   \n",
+       "0      9847       west                64                64   \n",
+       "1      9848       west                64                64   \n",
+       "2      9849       west                64                64   \n",
        "\n",
        "                                            geometry  \n",
-       "0  POLYGON Z ((-77.82534 34.47332 0.00000, -78.06...  \n",
-       "1  POLYGON Z ((-78.09591 35.63539 0.00000, -78.33...  \n",
-       "2  POLYGON Z ((-78.37797 36.81111 0.00000, -78.41...  "
+       "0  POLYGON Z ((-118.47827 32.36110 0.00000, -118....  \n",
+       "1  POLYGON Z ((-118.74228 33.52202 0.00000, -118....  \n",
+       "2  POLYGON Z ((-119.01018 34.68551 0.00000, -119....  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
