--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -109,6 +109,8 @@
     "            'Wax-Lake': Point(-91.5, 30).buffer(1),\n",
     "            'Bellingham': Point(-122.5, 48.5).buffer(1),\n",
     "            'Maine': Point(-69, 47).buffer(1),\n",
+    "            'Anchorage': Point(-150, 61).buffer(1),\n",
+    "            'Chile': Point(-69.0355, -19.449).buffer(1)\n",
     "            }\n",
     "\n",
     "TRACK_DICT = {'Los-Angeles-0': [64],\n",
@@ -122,7 +124,9 @@
     "              'Aleutian': [59],\n",
     "              'Wax-Lake': [63],\n",
     "              'Bellingham': [137],\n",
-    "              'Maine': [164]\n",
+    "              'Maine': [164],\n",
+    "              'Anchorage': [131],\n",
+    "              'Chile': [54]\n",
     "              }"
    ]
   },
@@ -1402,7 +1406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
