--- a/notebooks/Basic_Demo.ipynb
+++ b/notebooks/Basic_Demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "15c34696",
    "metadata": {
     "ExecuteTime": {
@@ -116,6 +116,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>frame_id</th>\n",
+       "      <th>hemisphere</th>\n",
        "      <th>track_number_min</th>\n",
        "      <th>track_number_max</th>\n",
        "      <th>geometry</th>\n",
@@ -125,6 +126,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5285</td>\n",
+       "      <td>west</td>\n",
        "      <td>35</td>\n",
        "      <td>35</td>\n",
        "      <td>POLYGON Z ((-122.73930 33.01088 0.00000, -122....</td>\n",
@@ -132,6 +134,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5286</td>\n",
+       "      <td>west</td>\n",
        "      <td>35</td>\n",
        "      <td>35</td>\n",
        "      <td>POLYGON Z ((-123.00511 34.17223 0.00000, -123....</td>\n",
@@ -139,6 +142,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5287</td>\n",
+       "      <td>west</td>\n",
        "      <td>35</td>\n",
        "      <td>35</td>\n",
        "      <td>POLYGON Z ((-123.28214 35.34912 0.00000, -123....</td>\n",
@@ -146,6 +150,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6452</td>\n",
+       "      <td>west</td>\n",
        "      <td>42</td>\n",
        "      <td>42</td>\n",
        "      <td>POLYGON Z ((-122.94671 35.59990 0.00000, -122....</td>\n",
@@ -153,6 +158,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>6453</td>\n",
+       "      <td>west</td>\n",
        "      <td>42</td>\n",
        "      <td>42</td>\n",
        "      <td>POLYGON Z ((-123.17840 34.43885 0.00000, -123....</td>\n",
@@ -162,12 +168,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   frame_id  track_number_min  track_number_max  \\\n",
-       "0      5285                35                35   \n",
-       "1      5286                35                35   \n",
-       "2      5287                35                35   \n",
-       "3      6452                42                42   \n",
-       "4      6453                42                42   \n",
+       "   frame_id hemisphere  track_number_min  track_number_max  \\\n",
+       "0      5285       west                35                35   \n",
+       "1      5286       west                35                35   \n",
+       "2      5287       west                35                35   \n",
+       "3      6452       west                42                42   \n",
+       "4      6453       west                42                42   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON Z ((-122.73930 33.01088 0.00000, -122....  \n",
@@ -1072,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
