--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -1210,7 +1210,7 @@
     "# hyp3_isce = hyp3_sdk.HyP3('https://hyp3-tibet-jpl.asf.alaska.edu')\n",
     "\n",
     "## Now test jobs are specified by a separate endpoint (not `job_type`)\n",
-    "hyp3_isce = hyp3_sdk.HyP3('https:// hyp3-a19-jpl-test.asf.alaska.edu')"
+    "hyp3_isce = hyp3_sdk.HyP3('d')"
    ]
   },
   {
