--- a/notebooks/Submitting_to_Hyp3.ipynb
+++ b/notebooks/Submitting_to_Hyp3.ipynb
@@ -351,7 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0p/d5x2m4tx5kg1246bplsvyfyh0000gq/T/ipykernel_27208/2968930518.py:2: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
+      "/var/folders/0p/d5x2m4tx5kg1246bplsvyfyh0000gq/T/ipykernel_17320/2968930518.py:2: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
       "  df_world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n"
      ]
     },
@@ -407,7 +407,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0p/d5x2m4tx5kg1246bplsvyfyh0000gq/T/ipykernel_27208/1923061845.py:2: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
+      "/var/folders/0p/d5x2m4tx5kg1246bplsvyfyh0000gq/T/ipykernel_17320/1923061845.py:2: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
       "  df_world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n"
      ]
     },
@@ -481,7 +481,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading stack from 5 fr\n"
+      "Downloading stack from 5 frame geometries: 100%|█| 5/5 [00:13<00:00,  2.61s/\n"
      ]
     },
     {
@@ -888,7 +888,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date Pairs: 100%|█| 5/5 [00\n"
+      "Date Pairs: 100%|█████████████████████████████| 5/5 [00:00<00:00, 43.82it/s]\n"
      ]
     }
    ],
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "dcc5809e",
    "metadata": {
     "ExecuteTime": {
@@ -1016,7 +1016,7 @@
        "'JOB_NAME: Saudi-Arabia_72_0830'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "f1cc16df",
    "metadata": {
     "ExecuteTime": {
@@ -1047,7 +1047,7 @@
        "'JOB_NAME character length: 20'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "2ce9417f",
    "metadata": {
     "ExecuteTime": {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "7eba165c",
    "metadata": {
     "ExecuteTime": {
@@ -1097,7 +1097,7 @@
        "  'frame_id': 11106}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "cd79c8c2",
    "metadata": {
     "ExecuteTime": {
@@ -1142,7 +1142,7 @@
        "   'frame_id': 11106}}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "d6b386cd",
    "metadata": {
     "ExecuteTime": {
@@ -1174,7 +1174,7 @@
        "25"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "839b3d9d",
    "metadata": {
     "ExecuteTime": {
